# rl-finlab

./: .gitignore  README.md  pyproject.toml
apps/: sb3_ppo_exec.py  sb3_sac_alloc.py
experiments/: alloc_risk_reward.toml  exec_reward_ablation.toml
notebooks/: exec_analysis.ipynb
src/agents/: custom_policy.py
src/baselines/: almgren_chriss.py  bh_mom_rev.py  twap_vwap.py
src/envs/: alloc_env.py  exec_env.py
src/eval/: metrics.py
src/utils/: data.py  data_alt.py  data_seed.py
