[project]
name = "rl-finlab"
description = "Reinforcement Learning Finance Laboratory"
version = "0.1.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "single"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
rl-finlab = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "==3.11"
ruff = "*"
pytorch = "*"
polars = "*"
jupyterlab = "*"
marimo = "*"
numpy = "*"
pandas = "*"
gymnasium = "*"
matplotlib = "*"
stable-baselines3 = "*"
yfinance = "*"
pyyaml = "*"

[tool.pixi.tasks]

[tool.pixi.tasks.train_exec]
cmd = [
    "python",
    "-mapps.sb3_ppo_exec",
    "--config=experiments/exec_reward_ablation.toml"
]
env = { PYTHONPATH = ".:./src" }

[tool.pixi.tasks.train_alloc]
cmd = [
    "python",
    "-mapps.sb3_sac_alloc",
    "--config=experiments/alloc_risk_reward.toml"
]
env = { PYTHONPATH = ".:./src" }
